--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "path": "^0.12.7",
     "react-scripts": "^3.4.3"
   }
 }
